更新token+redis后端代码
更新token+redis后端代码

--- a/begoo/server/src/cnblogs/conf/app.conf
+++ b/begoo/server/src/cnblogs/conf/app.conf
@@ -1,4 +1,6 @@
-appname = cnblogs
-httpport = 9000
-runmode = dev
+appname    = cnblogs
+httpport   = 9000
+runmode    = dev
+jwtkey     = "12345678"
+
 
